Update CI/CD pipeline for container deployment

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -2,8 +2,10 @@ name: deploy-container
 
 on: #events we're watching for
   push:
-    branches: -master
-    paths: -'packages/container/**' #only run this workflow when changes are made inside the container
+    branches:
+      - master
+    paths:
+      - "packages/container/**" #only run this workflow when changes are made inside the container
 
 defaults:
   run:
