--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,3 +27,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-north-1
+
+echo ${{ secrets.AWS_S3_BUCKET_NAME }}
