--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: |
-          echo ${{ secrets.AWS_S3_BUCKET_NAME }} 
+          echo "${{ secrets.AWS_S3_BUCKET_NAME }}"
           echo ${{ secrets.AWS_ACCESS_KEY_ID }} 
           echo ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
